@@ -1,3 +1,3 @@
 package main
 
-const VERSION = 2
+const VERSION = 3
